<resources>
    <string name="app_name">Isalat App</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Test Fragment\n Implement Function</string>
    <string name="welcome_to_sign_language_recognition_app">Welcome to Sign Language Recognition App</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="image">Images</string>
    <string name="register_text">Register Here</string>
    <string name="login">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="register">Sign Up</string>
    <string name="title_signup">Submit Your Data Here</string>
    <string name="title_login">Please Log In Here</string>
    <string name="login_text">Log In here</string>
    <string name="logout">Log Out</string>
    <string name="add_photo">Add Photo</string>
    <string name="description">Description</string>
    <string name="email_reminder">Please enter a valid email</string>
    <string name="login_successful">Login Successful</string>
    <string name="name_validasi">Name must be at least 4 characters</string>
    <string name="registration_successful">Registration successful</string>
    <string name="failed_login">Failed to Login: email or password does not exist in the database</string>
    <string name="failed_register">Failed to Register: email or password already exists in the database</string>
    <string name="password_caracter">Password must be at least %d characters</string>
    <string name="Record">Record</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="video">Video</string>
    <string name="default_web_client_id">Google Sing-In</string>
    <string name="titleNews">Judul\n</string>
    <string name="link">Link Source News</string>
    <string name="logo">Logo Image</string>
    <string name="learn_bisindo">Learn BISINDO with us.</string>
    <string name="to_register">Create an account now!</string>
    <string name="to_login">Log in here!</string>
    <string name="bisindo">BISINDO</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="minimum_characters">Password must be at least 8 character</string>
    <string name="mode_button">mode</string>
    <string name="capture_button">camera</string>
    <string name="gpu">GPU</string>
    <string name="live_mode">Live Mode</string>
    <string name="detection_mode">Detection Mode</string>
    <string name="menu_fragment">Menu Fragment</string>
    <string name="save_profile">Save Changes</string>
    <string name="phone">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="error">Unknown error occurred</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="subtitle_login">Sign in for starting your learning experience with us.</string>
    <string name="head_login">Back!</string>
    <string name="head1_login">Welcome</string>
    <string name="welcome_home">Welcome, John Doe</string>
    <string name="subtitle_home">Let\'s start the day, with us.</string>
    <string name="button">Button</string>
    <string name="title_btn">BISINDO Translation</string>
    <string name="object_detection">Object Detection</string>
    <string name="bisindo_dictionary">BISINDO Dictionary</string>
    <string name="news">News</string>
    <string name="news_for_you">News for You</string>
    <string name="phone_number">Phone Number</string>
    <string name="image_desc">Alphabet</string>
</resources>
