<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraXFragment">

    <!-- Camera preview layout -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    </androidx.camera.view.PreviewView>

    <!-- Overlay view -->
    <com.isalatapp.ui.customview.OverlayView
        android:id="@+id/overlayView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <!-- Mode button (bottom left) -->
    <ImageButton
        android:id="@+id/button_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_mode"
        android:background="@android:color/transparent"
        android:contentDescription="@string/mode_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Capture button (bottom center) -->
    <ImageButton
        android:id="@+id/button_capture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_camera"
        android:background="@android:color/transparent"
        android:contentDescription="@string/capture_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        tools:text="100ms"
        android:textColor="@color/white"
        android:id="@+id/inferenceTime"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ToggleButton
            android:id="@+id/isGpu"
            android:background="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textOff="@string/gpu"
            android:textOn="@string/gpu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Gallery button (bottom right) -->
    <ImageButton
        android:id="@+id/button_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_gallery"
        android:background="@android:color/transparent"
        android:contentDescription="@string/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <VideoView
        android:id="@+id/previewVideoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Upload Button -->
    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Upload"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/previewVideoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Recording duration text -->
    <TextView
        android:id="@+id/recording_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <!-- Recording indicator -->
    <ImageView
        android:id="@+id/recording_indicator"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_recording"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/recording_duration"
        android:layout_marginStart="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
